// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundButton should match the snapshot 1`] = `
<styled.button>
  <Styled(FaPlus) />
</styled.button>
`;

exports[`RoundButton should match the snapshot with icon 1`] = `
<styled.button>
  <p>
    Mock
  </p>
</styled.button>
`;

exports[`RoundButton should match the snapshot with icon 2`] = `
<styled.button>
  <p>
    +
  </p>
</styled.button>
`;
